<package>
  <name>ros-homework</name>
  <version>0.0.1</version>

  <description>homework 2</description>
  <maintainer email="n.smirnov@innopolis.university">Nikita Smirnov</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
